--- a/index.html
+++ b/index.html
@@ -1,153 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-<link rel="stylesheet" href="assets/style.css" type="text/css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+	<link rel="stylesheet" href="assets/style.css" type="text/css">
 
-    <title>studiofettle mind & body studio</title>
+	<title>studiofettle mind & body studio</title>
 </head>
 
 <body>
 
-<!-- Navbar -->
+	<!-- Navbar -->
 
-<header>
-<nav class="navbar navbar-expand-sm navbar-dark">
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<header>
+		<nav class="navbar navbar-expand-sm navbar-dark">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">About Us<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="our-services.html">Our Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="join-us.html">Join Us</a>
-      </li>
-         </ul>
-  </div>
-</nav>
-</header>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">About Us<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="our-services.html">Our Services</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="join-us.html">Join Us</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
-<!-- 1st section - company name / philosophy-->
+	<!-- 1st section - company name / philosophy-->
 
-<section id="company-name">
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-      <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
-      <h3 class="heading-3">Fettle</h3>
-      <p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
-</div>
-</div>
-</div>
-    </section>
+	<section id="company-name">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">
+					<h1 class="studiofettle">Studiofettle Mind & Body Studio</h1>
+					<h3 class="heading-3">Fettle</h3>
+					<p id="paragraph-size-specific">"meaning working order" and "optimal state of wellbeing"</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <!-- 2nd section - company images -->
+	<!-- 2nd section - company images -->
 
-<section id="images">
-    <div class="container">
-    <div class="row">
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studio-massage-image.jpg" alt="massage" class="img-thumbnail"/></div>
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studio-yoga-image.jpg" alt="yoga" class="img-thumbnail"/></div>
-    </div>
-</div>
-</div>
-    </section>
+	<section id="images">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-4">
+					<img src="assets/images/studio-massage-image.jpg" alt="massage" class="img-thumbnail"/></div>
+					<div class="col-sm-12 col-md-4">
+						<img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
+						<div class="col-sm-12 col-md-4">
+							<img src="assets/images/studio-yoga-image.jpg" alt="yoga" class="img-thumbnail"/></div>
+						</div>
+					</div>
+				</div>
+	</section>
 
-<!-- 3rd section - About us -->
-
-
-<section id="about-us-heading">
-<div class="container">
-<div class="row">
-<div class="col-sm-12">
-      <h2 class="heading-2 text-center spacing">About Us</h2> 
-      </div>
-      </div>
-      <div class="row">
-    <div class="col-sm-12 about-us-paragraph text-center">
-      <p>Fettle, Meaning 'Working order' and 'Optimal state of wellbeing'. Here at Studiofettle thats exactly how we want you to feel.</p> 
-      <p>Our philosophy prides itself in ensuring we together create and encourage good health and a positive mind. 
-            We are a wellbeing studio, focusing on you.
-            The range of services we have on offer all ensure you will develop both physically and mentally.
-            We become a team, we become a family, together we hold one simple outlook: To feel great and hold strong minds.</p>
-    </div>
-    </div>
-    </div>
-    </section>
-
-    <!-- 4th section - Testimonials -->
-
-    <section id="testimonials">
-<div class="container">
-<div class="row">
-<div class="col-sm-12">
-      <h2 class="heading-2 text-center">Testimonials</h2>
-      </div>
-</div>
-   <div class="row">
-  <div class="col-sm-12 col-md-6">
-  <img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-fluid img-thumbnail client-img"/>
-        <p id="bold">Jess: Truly amazing</p>
-        <p class="client-feedback">"I love the atmosphere at Studiofettle, it makes you feel happy whatever service you take"</p>
-</div>
-<div class="col-sm-12 col-md-6">
-    <img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-fluid img-thumbnail client-img"/>
-    <p id="bold">Sharon: I feel alive</p>
-    <p class="client-feedback">"Everytime I leave from my PT session, I feel confident and full of energy"</p>
-</div>
-</div>
-</div>
-</section>
-
-   
-<!-- Footer - Contact details -->
-
-<footer class="container-fluid footer-background">
-    <div class="row">
-    <div class="col-sm-12 col-md-4">
-    <h3>Find us here</h3>
-    <p>Studiofettle</p>
-       <p>Wilton Road, Humberston</p>
-       <p>NE Lincs, DN31 2JF</p>
-  </div>
-  <div class="col-sm-12 col-md-4">
-    <h4>Join Us</h4>
-    <p>Tel: 07986293307</p>
-    <p>Email: studiofettle@info.co.uk</p>
-
-    <!-- Copyright Footer - syntax from w3schools.com -->
-  
-  <p>&copy;2020 vixwebdesigns.co.uk</p>
-
-  </div>
-  <div class="col-sm-12 col-md-4">
-    <h4>Facebook</h4>
-    <a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
-  </div>
-</div>
-</div>
-        </footer>
+	<!-- 3rd section - About us -->
 
 
-       
+	<section id="about-us-heading">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="heading-2 text-center spacing">About Us</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 about-us-paragraph text-center">
+					<p>Fettle, Meaning 'Working order' and 'Optimal state of wellbeing'. Here at Studiofettle thats
+						exactly how we want you to feel.</p>
+					<p>Our philosophy prides itself in ensuring we together create and encourage good health and a
+						positive mind.
+						We are a wellbeing studio, focusing on you.
+						The range of services we have on offer all ensure you will develop both physically and mentally.
+						We become a team, we become a family, together we hold one simple outlook: To feel great and
+						hold strong minds.</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<!-- 4th section - Testimonials -->
+
+	<section id="testimonials">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="heading-2 text-center">Testimonials</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<img src="assets/images/Client-1-sm-pexels-photo-3545784.jpeg" alt="client-1" class="img-fluid img-thumbnail client-img"/>
+					<p id="bold">Jess: Truly amazing</p>
+					<p class="client-feedback">"I love the atmosphere at Studiofettle, it makes you feel happy whatever
+						service you take"</p>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<img src="assets/images/client-2-small-pexels-photo-774909.jpeg" alt="client-2" class="img-fluid img-thumbnail client-img"/>
+					<p id="bold">Sharon: I feel alive</p>
+					<p class="client-feedback">"Everytime I leave from my PT session, I feel confident and full of
+						energy"</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Footer - Contact details -->
+
+	<footer class="container-fluid footer-background">
+		<div class="row">
+			<div class="col-sm-12 col-md-4">
+				<h3>Find us here</h3>
+				<p>Studiofettle</p>
+				<p>Wilton Road, Humberston</p>
+				<p>NE Lincs, DN31 2JF</p>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<h4>Join Us</h4>
+				<p>Tel: 07986293307</p>
+				<p>Email: studiofettle@info.co.uk</p>
+
+				<!-- Copyright Footer - syntax from w3schools.com -->
+
+				<p>&copy;2020 vixwebdesigns.co.uk</p>
+
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<h4>Facebook</h4>
+				<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
+					id="fb-font-size"></i></a>
+			</div>
+		</div>
+		</div>
+	</footer>
+
+
+
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
