--- a/join-us.html
+++ b/join-us.html
@@ -1,147 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-<link rel="stylesheet" href="assets/style.css" type="text/css">
 
-    <title>studiofettle mind & body studio</title>
+<head>
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+	<link rel="stylesheet" href="assets/style.css" type="text/css">
+
+	<title>studiofettle mind & body studio</title>
 </head>
 
 <body>
 
-<!-- Navbar -->
+	<!-- Navbar -->
 
-<header>
-<nav class="navbar navbar-expand-sm navbar-dark">
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<header>
+		<nav class="navbar navbar-expand-sm navbar-dark">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">About Us<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="our-services.html">Our Services</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="join-us.html">Join Us</a>
-      </li>
-         </ul>
-  </div>
-</nav>
-</header>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">About Us<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="our-services.html">Our Services</a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="join-us.html">Join Us</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
 
-<!-- 1st section - company name / philosophy -->
+	<!-- 1st section - company name / philosophy -->
 
-<section id="company-name">
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-      <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
-      <h3 class="heading-3">Join us on your journey</h3>
-      <p id="paragraph-size-specific">"be good to yourself" and "we'll work together"</p>
-</div>
-</div>
-</div>
-    </section>
+	<section id="company-name">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">
+					<h1 class="studiofettle">Studiofettle Mind & Body Studio</h1>
+					<h3 class="heading-3">Join us on your journey</h3>
+					<p id="paragraph-size-specific">"be good to yourself" and "we'll work together"</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <!-- 2nd section - company images -->
+	<!-- 2nd section - company images -->
 
-    <section id="images">
-    <div class="container">
-    <div class="row">
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/woman-pexels-photo-917653.jpeg" alt="woman" class="img-thumbnail"/></div>
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" class="img-thumbnail"/></div>
+	<section id="images">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-4">
+					<img src="assets/images/woman-pexels-photo-917653.jpeg" alt="woman" class="img-thumbnail"/></div>
+					<div class="col-sm-12 col-md-4">
+						<img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
+						<div class="col-sm-12 col-md-4">
+							<img src="assets/images/pregnancy-pexels-photo-396133.jpeg" alt="pregnancy" class="img-thumbnail"/></div>
+						</div>
+					</div>
+				</div>
+	</section>
+
+	<!-- 3rd section - Join Us -->
+
+	<section id="join-us">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">
+					<h2 class="heading-2 text-center spacing">Join Us</h2>
+					<p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
+				</div>
+			</div>
+	</section>
+
+	<!-- 4th section - call to action form -->
+
+	<section class="form">
+		<form>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-sm-12 col-md-6">
+						<input type="text" class="form-control" placeholder="First name" required>
     </div>
+						<div class="col-sm-12 col-md-6">
+							<input type="text" class="form-control" placeholder="Last name" required>
 </div>
-</div>
-    </section>
-
-<!-- 3rd section - Join Us -->
-
-<section id="join-us">
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-      <h2 class="heading-2 text-center spacing">Join Us</h2> 
-      <p>We welcome your interest in Studiofettle. Please message us to start your journey.</p>
+						</div>
+						<div class="row">
+							<div class="col-sm-12 col-md-6">
+								<input type="text" class="form-control" placeholder="Telephone" required>
     </div>
+								<div class="col-sm-12 col-md-6">
+									<input type="text" class="form-control" placeholder="Email Address" required>
     </div>
-    </section>
+								</div>
+								<div class="form-group">
+									<label for="exampleFormControlTextarea1"></label>
+									<textarea class="form-control" placeholder="Message here" rows="6" required></textarea>
+									<button type="button" class="btn btn-info">Join Us</button>
+								</div>
+							</div>
+						</div>
+		</form>
 
-<!-- 4th section - call to action form -->
+		<!-- Footer - Contact details -->
 
-<section class="form">
-    <form>
-    <div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="First name" required>
-    </div>
-    <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="Last name" required>
-</div>
-  </div>
-      <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="Telephone" required>
-    </div>
-    <div class="col-sm-12 col-md-6">
-      <input type="text" class="form-control" placeholder="Email Address" required>
-    </div>
-  </div>
-  <div class="form-group">
-  <label for="exampleFormControlTextarea1"></label>
-    <textarea class="form-control" placeholder="Message here" rows="6" required></textarea>
-    <button type="button" class="btn btn-info">Join Us</button>
-  </div>
-  </div>
-  </div>
-</form>
+		<footer class="container-fluid footer-background">
+			<div class="row">
+				<div class="col-sm-12 col-md-4">
+					<h3>Find us here</h3>
+					<p>Studiofettle</p>
+					<p>Wilton Road, Humberston</p>
+					<p>NE Lincs, DN31 2JF</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<h4>Join Us</h4>
+					<p>Tel: 07986293307</p>
+					<p>Email: studiofettle@info.co.uk</p>
 
-<!-- Footer - Contact details -->
+					<!-- Copyright Footer - syntax from w3schools.com -->
 
-<footer class="container-fluid footer-background">
-    <div class="row">
-    <div class="col-sm-12 col-md-4">
-    <h3>Find us here</h3>
-    <p>Studiofettle</p>
-       <p>Wilton Road, Humberston</p>
-       <p>NE Lincs, DN31 2JF</p>
-  </div>
-  <div class="col-sm-12 col-md-4">
-    <h4>Join Us</h4>
-    <p>Tel: 07986293307</p>
-    <p>Email: studiofettle@info.co.uk</p>
+					<p>&copy;2020 vixwebdesigns.co.uk</p>
 
-    <!-- Copyright Footer - syntax from w3schools.com -->
-  
-  <p>&copy;2020 vixwebdesigns.co.uk</p>
-
-  </div>
-  <div class="col-sm-12 col-md-4">
-    <h4>Facebook</h4>
-    <a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
-  </div>
-</div>
-</div>
-        </footer>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<h4>Facebook</h4>
+					<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
+						id="fb-font-size"></i></a>
+				</div>
+			</div>
+			</div>
+		</footer>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
