--- a/our-services.html
+++ b/our-services.html
@@ -1,188 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-<link rel="stylesheet" href="assets/style.css" type="text/css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+	<link rel="stylesheet" href="assets/style.css" type="text/css">
 
 
-    <title>studiofettle mind & body studio</title>
+	<title>studiofettle mind & body studio</title>
 </head>
 
 <body>
 
-<!-- Navbar -->
+	<!-- Navbar -->
 
-<header>
-<nav class="navbar navbar-expand-sm navbar-dark">
-   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<header>
+		<nav class="navbar navbar-expand-sm navbar-dark">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">About Us<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="our-services.html">Our Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="join-us.html">Join Us</a>
-      </li>
-         </ul>
-  </div>
-</nav>
-</header>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="index.html">About Us<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="our-services.html">Our Services</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="join-us.html">Join Us</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 
-<!-- 1st section - company name / philosophy -->
+	<!-- 1st section - company name / philosophy -->
 
-<section id="company-name">
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-      <h1 class="studiofettle">Studiofettle Mind & Body Studio</h1> 
-      <h3 class="heading-3">Time for you</h3>
-      <p id="paragraph-size-specific">"take time to rest your mind" and "care for your body"</p>
-</div>
-</div>
-</div>
-    </section>
+	<section id="company-name">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">
+					<h1 class="studiofettle">Studiofettle Mind & Body Studio</h1>
+					<h3 class="heading-3">Time for you</h3>
+					<p id="paragraph-size-specific">"take time to rest your mind" and "care for your body"</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <!-- 2nd section - company images -->
+	<!-- 2nd section - company images -->
 
-    <section id="images">
-    <div class="container">
-    <div class="row">
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/yoga-service-image.jpg" alt="yoga-service" class="img-thumbnail"/></div>
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
-    <div class="col-sm-12 col-md-4">
-    <img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" class="img-thumbnail"/></div>
+	<section id="images">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-4">
+					<img src="assets/images/yoga-service-image.jpg" alt="yoga-service" class="img-thumbnail"/></div>
+					<div class="col-sm-12 col-md-4">
+						<img src="assets/images/studiofettle-logo.jpg" alt="logo" class="img-thumbnail"/></div>
+						<div class="col-sm-12 col-md-4">
+							<img src="assets/images/studio-counselling-room-image.jpg" alt="counselling" class="img-thumbnail"/></div>
+						</div>
+					</div>
+				</div>
+	</section>
+
+	<!--3rd section - Bio-->
+
+	<section id="bio-title">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">
+					<h2 class="heading-2 text-center spacing">Bio</h2>
+				</div>
+	</section>
+
+	<!---Bootstrap Carousel-->
+
+	<section id="bio">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img src="assets/images/proprietor-image-a.jpg" class="d-block w-100" alt="proprietor-image-a">
     </div>
-</div>
-</div>
-    </section>
-
-<!--3rd section - Bio-->
-
-<section id="bio-title">
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-<h2 class="heading-2 text-center spacing">Bio</h2>
-</div>
-</section>
-
-<!---Bootstrap Carousel-->
-
-<section id="bio">
-<div class="container">
-     <div class="row">
-<div class="col-sm-12 col-md-6">
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-        <img src="assets/images/proprietor-image-a.jpg" class="d-block w-100" alt="proprietor-image-a">
+								<div class="carousel-item">
+									<img src="assets/images/proprietor-image-c.jpg" class="d-block w-100" alt="proprietor-image-c">
     </div>
-    <div class="carousel-item">
-      <img src="assets/images/proprietor-image-c.jpg" class="d-block w-100" alt="proprietor-image-c">
-    </div>
-    <div class="carousel-item">
-      <img src="assets/images/proprietor-image-b.jpg" class="d-block w-100" alt="proprietor-image-b">
+									<div class="carousel-item">
+										<img src="assets/images/proprietor-image-b.jpg" class="d-block w-100" alt="proprietor-image-b">
   </div>
-  </div>
-  </div>
-  </div>
-<div class="col-sm-12 col-md-6">
-<p>Rachael, owner of Studiofettle, prides herself in promoting health and wellbeing. 
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-12 col-md-6">
+								<p>Rachael, owner of Studiofettle, prides herself in promoting health and wellbeing.
 
-   With a career stemming from customer service, mental health and personal training, the studio is a haven for feel good services.</p>
+									With a career stemming from customer service, mental health and personal training,
+									the studio is a haven for feel good services.</p>
 
-<p>Rachael herself delivers PT sessions for all levels tailoring every session to your needs. 
+								<p>Rachael herself delivers PT sessions for all levels tailoring every session to your
+									needs.
 
-With a portfolio of clients, including injury, pre wedding, pre and post baby, there are success stories galore.</p>
+									With a portfolio of clients, including injury, pre wedding, pre and post baby, there
+									are success stories galore.</p>
 
-<p>"I PT various clients, all with a story to tell. So we tailor their sessions to their individual requirements. The main thing is together we reach their goals, build their confidence and they leave feeling fantastic".</p>
+								<p>"I PT various clients, all with a story to tell. So we tailor their sessions to their
+									individual requirements. The main thing is together we reach their goals, build
+									their confidence and they leave feeling fantastic".</p>
 
-<p>Studiofettle is not a gym its a wellbeing center that promotes healthy body, healthy mind and a positive you!</p>
-</div>
-</div>
-    </section>
+								<p>Studiofettle is not a gym its a wellbeing center that promotes healthy body, healthy
+									mind and a positive you!</p>
+							</div>
+						</div>
+	</section>
 
-<!--4th section - services-->
+	<!--4th section - services-->
 
-<section id="services-title">
-<div class="container-fluid">
-<div class="row">
-<div class="col-md-12">
-<h2 class="heading-2 text-center">Our Services</h2>
-</div>
-</section>
+	<section id="services-title">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">
+					<h2 class="heading-2 text-center">Our Services</h2>
+				</div>
+	</section>
 
 
-  <section id="services">
-   <div class="container">
-   <div class="row">
-  <div class="col-sm-12 col-md-3">
-  <img src="assets/images/massage.jpg" alt="massage-room" class="img-fluid img-thumbnail"/>
-  <p id="bold">Massage Therapy</p>
-  <p>We offer sports massage, full relaxation, hot stone, book in with our therapists</p>
-</div>
-<div class="col-sm-12 col-md-3">
-<img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-fluid img-thumbnail"/>
-<p id="bold">Yoga Moves</p>
-<p>Yoga moves brings peace and tranquility, join us to relax the mind</p>
-</div>
-<div class="col-sm-12 col-md-3">
-<img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-fluid img-thumbnail"/>
-<p id="bold">Hypnotherapy</p>
-<p>Hypnotherapy can ease many life issues, book in a session to work on freeing your mind</p>
-</div>
-<div class="col-sm-12 col-md-3">
-<img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-fluid img-thumbnail"/>
-<p id="bold">Genevieve Pilates</p>
-<p>Join Genevieve for weekly pilates, be quick its popular, book your slot</p>
-</div>
-</div>
-</div>
-    </section>  
+	<section id="services">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-3">
+					<img src="assets/images/massage.jpg" alt="massage-room" class="img-fluid img-thumbnail"/>
+					<p id="bold">Massage Therapy</p>
+					<p>We offer sports massage, full relaxation, hot stone, book in with our therapists</p>
+				</div>
+				<div class="col-sm-12 col-md-3">
+					<img src="assets/images/yoga-moves.png" alt="yoga-moves" class="img-fluid img-thumbnail"/>
+					<p id="bold">Yoga Moves</p>
+					<p>Yoga moves brings peace and tranquility, join us to relax the mind</p>
+				</div>
+				<div class="col-sm-12 col-md-3">
+					<img src="assets/images/hypnotherapy.jpg" alt="hypnotherapy" class="img-fluid img-thumbnail"/>
+					<p id="bold">Hypnotherapy</p>
+					<p>Hypnotherapy can ease many life issues, book in a session to work on freeing your mind</p>
+				</div>
+				<div class="col-sm-12 col-md-3">
+					<img src="assets/images/genevieve-pilates.jpg" alt="genevieve-pilates" class="img-fluid img-thumbnail"/>
+					<p id="bold">Genevieve Pilates</p>
+					<p>Join Genevieve for weekly pilates, be quick its popular, book your slot</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-<!-- Footer - Contact details -->
+	<!-- Footer - Contact details -->
 
-<footer class="container-fluid footer-background">
-    <div class="row">
-    <div class="col-sm-12 col-md-4">
-    <h3>Find us here</h3>
-    <p>Studiofettle</p>
-       <p>Wilton Road, Humberston</p>
-       <p>NE Lincs, DN31 2JF</p>
-  </div>
-  <div class="col-sm-12 col-md-4">
-    <h4>Join Us</h4>
-    <p>Tel: 07986293307</p>
-    <p>Email: studiofettle@info.co.uk</p>
+	<footer class="container-fluid footer-background">
+		<div class="row">
+			<div class="col-sm-12 col-md-4">
+				<h3>Find us here</h3>
+				<p>Studiofettle</p>
+				<p>Wilton Road, Humberston</p>
+				<p>NE Lincs, DN31 2JF</p>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<h4>Join Us</h4>
+				<p>Tel: 07986293307</p>
+				<p>Email: studiofettle@info.co.uk</p>
 
-    <!-- Copyright Footer - syntax from w3schools.com -->
-  
-  <p>&copy;2020 vixwebdesigns.co.uk</p>
+				<!-- Copyright Footer - syntax from w3schools.com -->
 
-  </div>
-  <div class="col-sm-12 col-md-4">
-    <h4>Facebook</h4>
-    <a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square" id="fb-font-size"></i></a>
-  </div>
-</div>
-</div>
-        </footer>
+				<p>&copy;2020 vixwebdesigns.co.uk</p>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+			</div>
+			<div class="col-sm-12 col-md-4">
+				<h4>Facebook</h4>
+				<a href="https://www.facebook.com/studiofettle/" target="_blank" i class="fab fa-facebook-square"
+					id="fb-font-size"></i></a>
+			</div>
+		</div>
+		</div>
+	</footer>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
 
 </body>
+
 </html>
